(feat) dataset can now be downloaded via the link
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="/script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
     <title>Scraper</title>
 </head>
 
 <body>
     <div>
         <button type="button" id="start-button">Start Scraper</button>
+        <div id="memes">
+            <a href="./dataset.tar.gz" download="dataset.tar.gz">Download</a>
+        </div>
     </div>
 </body>
 
