(feat) download link is only visible if the dataset has been scraped
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" , href="stylesheet.css">
     <meta charset="UTF-8">
     <script src="script.js" type="module"></script>
     <title>Scraper</title>
@@ -10,7 +11,7 @@
 <body>
     <div>
         <button type="button" id="start-button">Start Scraper</button>
-        <div id="memes">
+        <div id="datasetDownload">
             <a href="./dataset.tar.gz" download="dataset.tar.gz">Download</a>
         </div>
     </div>
