(fix) now actually correctly uses link
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,8 @@
 <body>
     <div>
         <button type="button" id="start-button">Start Scraper</button>
-        <div id="datasetDownload">
-            <a href="./dataset.tar.gz" download="dataset.tar.gz">Download</a>
+        <div id="datasetDownloadDiv">
+            <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
     </div>
 </body>
