(feat) adds progressbar
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,12 @@
             <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
     </div>
+    <div>
+        <div id="progressDiv">
+            <p id="progressText"></p>
+            <progress id="progressBar" value="0" max="5"></progress>
+        </div>
+    </div>
 </body>
 
 </html>
