(feat) adds AddWebsite button and sends website to backend
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" , href="stylesheet.css">
     <meta charset="UTF-8">
-    <script src="script.js" type="module"></script>
     <title>Scraper</title>
 </head>
 
@@ -14,6 +13,7 @@
         <div id="datasetDownloadDiv">
             <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
+        <button type="button" id="add-website">Add Website</button>
     </div>
     <div>
         <div id="progressDiv">
@@ -21,6 +21,7 @@
             <progress id="progressBar" value="0" max="5"></progress>
         </div>
     </div>
+    <script src="script.js" type="module" type="text/javascript"></script>
 </body>
 
 </html>
