(feat) website is now added to websites.json
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -11,7 +11,7 @@
     <div>
         <p>Currently supported Websites are: </p>
     </div>
-    <form id="form" action="index.html">
+    <form id="form">
         <label for="website">Website Url:</label>
         <input type="url" id="website" name="websiteUrl" required="true"><br><br>
         <label for="weight">Weight (0-1):</label>
