(refactor) minor refactoring
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" , href="stylesheet.css">
+    <link rel="stylesheets/stylesheet" , href="stylesheet.css">
     <meta charset="UTF-8">
     <title>Scraper</title>
 </head>
@@ -20,7 +20,7 @@
         <input type="number" id="nrOfPages" name="nrOfPages" min="0" max="10" step="1" required="true" /><br><br>
         <input type="submit" id="submit" value="Submit">
     </form>
-    <script src="addWebsite.js" type="module"></script>
+    <script src="scripts/addWebsite.js" type="module"></script>
 </body>
 
 </html>
