--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" , href="stylesheet.css">
+    <link rel="stylesheets/stylesheet" , href="stylesheet.css">
     <meta charset="UTF-8">
     <title>Scraper</title>
 </head>
@@ -14,6 +14,7 @@
             <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
         <button type="button" id="add-website">Add Website</button>
+        <button type="button" id="update-website">Update Website</button>
     </div>
     <div>
         <div id="progressDiv">
@@ -21,7 +22,7 @@
             <progress id="progressBar" value="0" max="5"></progress>
         </div>
     </div>
-    <script src="script.js" type="module" type="text/javascript"></script>
+    <script src="scripts/script.js" type="module" type="text/javascript"></script>
 </body>
 
 </html>
