(fix) fix weight and nrOfPages being sent as string
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheets/stylesheet" , href="stylesheet.css">
+    <link rel="stylesheet" , href="stylesheets/stylesheet.css">
     <meta charset="UTF-8">
     <title>Scraper</title>
 </head>
