(feat) adds list view to display websites
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheets/stylesheet" , href="stylesheet.css">
+    <link rel="stylesheet" , href="stylesheets/stylesheet.css">
     <meta charset="UTF-8">
     <title>Scraper</title>
 </head>
 
 <body>
     <div>
-        <p>Currently supported Websites are: </p>
+        <p>Add Website: </p>
     </div>
     <form id="form">
         <label for="website">Website Url:</label>
