--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -9,9 +9,11 @@
 
 <body>
     <div>
-        <p>Update Website: </p>
+        <h1>Websites: </h1>
     </div>
+    <ul id="list">
 
+    </ul>
     <script src="scripts/displayWebsites.js" type="module"></script>
 </body>
 
