--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
             <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
         <button type="button" id="add-website">Add Website</button>
-        <button type="button" id="update-website">Update Website</button>
+        <button type="button" id="display-websites">Display Websites</button>
     </div>
     <div>
         <div id="progressDiv">
