--- a/frontend/updateWebsite.html
+++ b/frontend/updateWebsite.html
@@ -9,10 +9,18 @@
 
 <body>
     <div>
-        <p>Update Website: </p>
+        <h1>Update Website: </h1>
     </div>
-
-    <script src="scripts/displayWebsites.js" type="module"></script>
+    <h3 id="website"></h3>
+    <p id="websiteInfo"></p>
+    <form id="updateForm">
+        <lable>Number of Pages (0-10):</lable>
+        <input type="number" id="nrOfPages" name="nrOfPages" min="0" max="10" step="1" required="true" />
+        <lable>Weight (0-1):</lable>
+        <input type="number" id="weight" name="weight" min="0" max="1" step="0.1" required="true" />
+        <button id="updateButton">Update</button>
+    </form>
+    <script src="scripts/updateWebsite.js" type="module"></script>
 </body>
 
 </html>
