(fix) adds return buttons for some sites Website is now usable
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -20,6 +20,7 @@
         <input type="number" id="nrOfPages" name="nrOfPages" min="0" max="10" step="1" required="true" /><br><br>
         <input type="submit" id="submit" value="Submit">
     </form>
+    <button id="returnButton">Main Menu</button>
     <script src="scripts/addWebsite.js" type="module"></script>
 </body>
 
