--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -14,6 +14,7 @@
     <ul id="list">
 
     </ul>
+    <button id="returnButton">Main Menu</button>
     <script src="scripts/displayWebsites.js" type="module"></script>
 </body>
 
