(feat) adds site to adjiust parameters used to calculate trust
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,10 @@
         <div id="datasetDownloadDiv">
             <a download="dataset.tar.gz" id="datasetDownloadLink">Download</a>
         </div>
-        <button type="button" id="add-website">Add Website</button>
-        <button type="button" id="display-websites">Display Websites</button>
+        <button type="button" id="addWebsite">Add Website</button>
+        <button type="button" id="displayWebsites">Display Websites</button>
+        <button type="button" id="updateTrustCalc">Update Trust Calculation Parameters</button>
+
     </div>
     <div>
         <div id="progressDiv">
