(feat) adds a bit of css to make the websites look cleaner
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -11,9 +11,7 @@
     <div>
         <h1>Websites: </h1>
     </div>
-    <ul id="list">
-
-    </ul>
+    <ul id="list"></ul>
     <button id="returnButton">Main Menu</button>
     <script src="scripts/displayWebsites.js" type="module"></script>
 </body>
