--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -18,7 +18,7 @@
         <input type="number" id="weight" name="weight" min="0" max="1" step="0.1" required="true" /><br><br>
         <label for="nrOfPages">Number of Pages (0-10):</label>
         <input type="number" id="nrOfPages" name="nrOfPages" min="0" max="10" step="1" required="true" /><br><br>
-        <input type="submit" id="submit" value="Submit">
+        <button type="button" id="submit" value="Submit">Submit</button>
     </form>
     <button id="returnButton">Main Menu</button>
     <script src="scripts/addWebsite.js" type="module"></script>
