(feat) adds new site to display all scraped data
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
         <button type="button" id="start-button" class="startScraper">Start Scraper</button><br><br>
         <button type="button" id="addWebsite">Add Website</button><br><br>
         <button type="button" id="displayWebsites">Display Websites</button><br><br>
+        <button type="button" id="displayData">Display Data</button><br><br>
         <button type="button" id="updateTrustCalc">Update Trust Calculation Parameters</button><br><br>
     </div>
     <div>
