--- a/frontend/displayData.html
+++ b/frontend/displayData.html
@@ -12,6 +12,7 @@
         <h1>Data: </h1>
     </div>
     <ul id="list"></ul>
+    <button id="updateDatasetButton">Update Dataset</button>
     <button id="returnButton">Main Menu</button>
     <script src="scripts/displayData.js" type="module"></script>
 </body>
