(feat) adds floating menu to dataset display
Signed-off-by: Alyks1 <alexander.gemmingen@gmx.de>

--- a/frontend/displayData.html
+++ b/frontend/displayData.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-    <div>
-        <h1>Data: </h1>
+    <br><br>
+    <div class="fixedDiv">
+        <button id="updateDatasetButton">Update Dataset</button>
+        <button id="returnButton">Main Menu</button>        
     </div>
     <ul id="list"></ul>
-    <button id="updateDatasetButton">Update Dataset</button>
-    <button id="returnButton">Main Menu</button>
     <script src="scripts/displayData.js" type="module"></script>
 </body>
 
