(feat) adds basic Wizard setup
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/displayData.html
+++ b/frontend/displayData.html
@@ -11,7 +11,9 @@
     <br><br>
     <div class="fixedDiv">
         <button id="updateDatasetButton">Update Dataset</button>
-        <button id="returnButton">Main Menu</button>        
+        <button id="returnButton">Main Menu</button>
+        <a download="dataset.tar.gz" id="datasetDownloadLink" class="download"
+            href="/output/dataset.tar.gz">Download</a>
     </div>
     <ul id="list"></ul>
     <script src="scripts/displayData.js" type="module"></script>
