--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="menu">
-        <button type="button" id="start-button" class="startScraper">Start Scraper</button><br><br>
+        <button type="button" id="start-button" class="startScraper">Start</button><br><br>
         <button type="button" id="addWebsite">Add Website</button><br><br>
         <button type="button" id="displayWebsites">Display Websites</button><br><br>
         <button type="button" id="displayData">Display Data</button><br><br>
