--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -21,6 +21,7 @@
         <button type="button" id="submit" value="Submit">Submit</button>
     </form>
     <button id="returnButton">Main Menu</button>
+    <button id="nextButton"> Next</button>
     <script src="scripts/addWebsite.js" type="module"></script>
 </body>
 
