--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -13,6 +13,7 @@
     </div>
     <ul id="list"></ul>
     <button id="returnButton">Main Menu</button>
+    <button id="nextButton"> Next</button>
     <script src="scripts/displayWebsites.js" type="module"></script>
 </body>
 
