--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,17 +9,11 @@
 
 <body>
     <div class="menu">
-        <button type="button" id="start-button" class="startScraper">Start</button><br><br>
+        <button type="button" id="startButton" class="startScraper">Start</button><br><br>
         <button type="button" id="addWebsite">Add Website</button><br><br>
         <button type="button" id="displayWebsites">Display Websites</button><br><br>
         <button type="button" id="displayData">Display Data</button><br><br>
         <button type="button" id="updateTrustCalc">Update Trust Calculation Parameters</button><br><br>
-    </div>
-    <div>
-        <div id="progressDiv">
-            <p id="progressText"></p>
-            <progress id="progressBar" value="0" max="5"></progress>
-        </div>
     </div>
     <div id="datasetDownloadDiv">
         <a download="dataset.tar.gz" id="datasetDownloadLink" class="download">Download</a>
