(feat) adds back buttons
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/addWebsite.html
+++ b/frontend/addWebsite.html
@@ -21,7 +21,8 @@
         <button type="button" id="submit" value="Submit">Submit</button>
     </form>
     <button id="returnButton">Main Menu</button>
-    <button id="nextButton"> Next</button>
+    <button id="backButton">Back</button>
+    <button id="nextButton">Next</button>
     <script src="scripts/addWebsite.js" type="module"></script>
 </body>
 
