--- a/frontend/adjustTrust.html
+++ b/frontend/adjustTrust.html
@@ -30,6 +30,7 @@
     </form>
 
     <button id="returnButton">Main Menu</button>
+    <button id="backButton">Back</button>
     <button id="nextButton">Next</button>
     <script src="scripts/adjustTrust.js" type="module"></script>
 </body>
