(chore) updated main menu UI
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
+    <h1>Scraper</h1>
     <div class="menu">
         <button type="button" id="startButton" class="startScraper">Start</button><br><br>
-        <button type="button" id="addWebsite">Add Website</button><br><br>
         <button type="button" id="displayWebsites">Display Websites</button><br><br>
-        <button type="button" id="displayData">Display Data</button><br><br>
+        <button type="button" id="addWebsite">Add Website</button><br><br>
         <button type="button" id="updateTrustCalc">Update Trust Calculation Parameters</button><br><br>
+        <button type="button" id="displayData">Display Data</button><br><br>
     </div>
     <script src="scripts/script.js" type="module" type="text/javascript"></script>
 </body>
