--- a/frontend/updateWebsite.html
+++ b/frontend/updateWebsite.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" , href="stylesheets/stylesheet.css">
     <meta charset="UTF-8">
-    <title>Scraper</title>
+    <title>Update Website</title>
 </head>
 
 <body>
@@ -21,4 +21,5 @@
     <button id="backButton">Back</button>
     <script src="scripts/updateWebsite.js" type="module"></script>
 </body>
+
 </html>
