--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" , href="stylesheets/stylesheet.css">
     <meta charset="UTF-8">
-    <title>Scraper</title>
+    <title>Display Websites</title>
 </head>
 
 <body>
