(feat) adds info box to explain the dataset
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,20 @@
         <button type="button" id="updateTrustCalc">Update Trust Calculation Parameters</button><br><br>
         <button type="button" id="displayData">Display Data</button><br><br>
     </div>
+    <div class="display">
+        <p>
+            This scraper creates a Dataset of images and year numbers of artifacts by scraping a selection of websites
+            specified by the user.
+            <br><br>
+            The dataset produced, is a list of images paired with their corrisponding year of creation.
+            It contains a CSV file that maps each image to its year of creation and a trust score, which
+            can be used to determine the accuracy of the year of creation. The trust score is calculated by taking
+            into account the trust parameters given by the user and a form of proof-of-work where data with more
+            information is seen as more likly to be correct.
+            <br><br>
+            Once scraped (Start), the dataset can be downloaded from the Display Data page.
+        </p>
+    </div>
     <script src="scripts/script.js" type="module" type="text/javascript"></script>
 </body>
 
