--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,12 +20,16 @@
         <p>
             This scraper creates a Dataset of images and year numbers of artifacts by scraping a selection of websites
             specified by the user.
-            <br><br>
+            <br>
             The dataset produced, is a list of images paired with their corrisponding year of creation.
-            It contains a CSV file that maps each image to its year of creation and a trust score, which
-            can be used to determine the accuracy of the year of creation. The trust score is calculated by taking
-            into account the trust parameters given by the user and a form of proof-of-work where data with more
-            information is seen as more likly to be correct.
+            It contains a CSV file (_datasetInfo.csv), which maps each image to its year of creation and a trust score,
+            which can be used to determine the accuracy of the year of creation.
+            <br><br>
+            Tip: To find the _datasetInfo.csv file in the dataset, sort by name in decending order.
+            <br><br>
+            The trust score is calculated by taking into account the trust parameters given by the user and a form of
+            proof-of-work where data with more information is seen as more likely to be correct. However, the user can
+            easily remove data from the dataset via the Display Data page.
             <br><br>
             Once scraped (Start), the dataset can be downloaded from the Display Data page.
         </p>
