(fix) fixed trust calculations being wrong
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/adjustTrust.html
+++ b/frontend/adjustTrust.html
@@ -16,12 +16,12 @@
 
         <label for="notBetween0and100">NOT between 0 and 100</label>
         <input type="checkbox" class="switch" id="notBetween0and100" name="notBetween0and100"><br><br>
-        <label for="differentNr">a combination of many different numbers (E.g. 1872 vs 1000):</label>
-        <input type="checkbox" class="switch" id="differentNr" name="differentNr" /><br><br>
-        <label for="multipleOf10and5">a multiple of 5 and 10:</label>
+        <label for="multipleOf10and5">NOT a multiple of 5:</label>
         <input type="checkbox" class="switch" id="multipleOf10and5" name="multipleOf10and5" /><br><br>
         <label for="notBetween0and10">NOT between 0 and 10:</label>
         <input type="checkbox" class="switch" id="between0and10" name="between0and10" /><br><br>
+        <label for="differentNr">a combination of many different numbers (E.g. 1872 vs 1000):</label>
+        <input type="checkbox" class="switch" id="differentNr" name="differentNr" /><br><br>
         <p>Use this field to reduce the overall trust by the inputed amount.
             This can be done to keep trust lower and reduce 'Trust inflation'. Default is 1.</p>
         <input type="number" id="reduceTrust" name="reduceTrust" /><br><br>
