(fix) fixed adjustTrust after renaming
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/adjustTrust.html
+++ b/frontend/adjustTrust.html
@@ -16,10 +16,10 @@
 
         <label for="notBetween0and100">NOT between 0 and 100</label>
         <input type="checkbox" class="switch" id="notBetween0and100" name="notBetween0and100"><br><br>
-        <label for="multipleOf10and5">NOT a multiple of 5:</label>
-        <input type="checkbox" class="switch" id="multipleOf10and5" name="multipleOf10and5" /><br><br>
+        <label for="notMultipleOf10and5">NOT a multiple of 5:</label>
+        <input type="checkbox" class="switch" id="notMultipleOf10and5" name="notMultipleOf10and5" /><br><br>
         <label for="notBetween0and10">NOT between 0 and 10:</label>
-        <input type="checkbox" class="switch" id="between0and10" name="between0and10" /><br><br>
+        <input type="checkbox" class="switch" id="notBetween0and10" name="notBetween0and10" /><br><br>
         <label for="differentNr">a combination of many different numbers (E.g. 1872 vs 1000):</label>
         <input type="checkbox" class="switch" id="differentNr" name="differentNr" /><br><br>
         <p>Use this field to reduce the overall trust by the inputed amount.
