--- a/frontend/adjustTrust.html
+++ b/frontend/adjustTrust.html
@@ -28,10 +28,11 @@
         <button type="button" id="submitButton">Submit</button>
 
     </form>
-
-    <button id="returnButton">Main Menu</button>
-    <button id="backButton">Back</button>
-    <button id="nextButton">Start Scraper</button>
+    <div class="fixedDiv">
+        <button id="returnButton">Main Menu</button>
+        <button id="backButton">Back</button>
+        <button id="nextButton">Start Scraper</button>
+    </div>
     <script src="scripts/adjustTrust.js" type="module"></script>
 </body>
 
