--- a/frontend/displayWebsiteList.html
+++ b/frontend/displayWebsiteList.html
@@ -12,8 +12,10 @@
         <h1>Websites: </h1>
     </div>
     <ul id="list"></ul>
-    <button id="returnButton">Main Menu</button>
-    <button id="nextButton">Next</button>
+    <div class="fixedDiv">
+        <button id="returnButton">Main Menu</button>
+        <button id="nextButton">Next</button>
+    </div>
     <script src="scripts/displayWebsites.js" type="module"></script>
 </body>
 
